# tauri-search

./: README.md  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: apps.rs  cache.rs  main.rs  spotlight.rs
src/components/ui/: command.tsx
src/lib/: score.ts
