[package]
name = "tauri-search"
version = "0.0.0"
description = "A Tauri search app"
authors = ["Liam Power <liafmpwoer@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = ["macos-private-api", "api-all"] }
bitflags = "2.4.1"
applications = "0.2.3"
icns = "0.3.1"
base64 = "0.22.1"
lazy_static = "1.5.0"
image = "0.24.4"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = { version = "0.23" }
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.25" }
objc = { version = "0.2.7" }
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
